Merge branch 'master' of https://github.com/wlslrbsl/SugarNote
# Conflicts:
#	app/src/main/java/com/isens/sugarnote/HomeFragment.java
#	app/src/main/java/com/isens/sugarnote/MainActivity.java